--- a/2022/MediaRepresentationVI/mr6_06.md
+++ b/2022/MediaRepresentationVI/mr6_06.md
@@ -7,16 +7,34 @@
 ## 目次<!-- omit in toc -->
 
 - [メディア表現 VI 6. モダンExcel](#メディア表現-vi-6-モダンexcel)
+  - [今日利用するデータ](#今日利用するデータ)
   - [モダンExcel?](#モダンexcel)
+  - [コンピュータ演習のおさらい・モダンExcelに入る前に知っておいてほしいこと](#コンピュータ演習のおさらいモダンexcelに入る前に知っておいてほしいこと)
+    - [Officeのバージョンについて](#officeのバージョンについて)
+      - [Macの人](#macの人)
+      - [Windowsの人](#windowsの人)
+    - [見方](#見方)
+      - [製品エディション](#製品エディション)
+      - [数字](#数字)
+    - [ピボットテーブル](#ピボットテーブル)
+      - [単純集計の方法](#単純集計の方法)
+    - [テーブル](#テーブル)
+    - [スピル](#スピル)
   - [提出について](#提出について)
 
 ---
 
 ## 本日の内容<!-- omit in toc -->
-- 【第5回】従来のセルとは異なるモダンExcelについて学修する。
-- 【第6回】モダンExcelを用いた分析・可視化について学修する。
+- 【第5回】モダンExcelI 従来のセルとは異なるモダンExcelについて学修する。
+- 【第6回】モダンExcelII を用いた分析・可視化について学修する。
 
-としていましたが、今日は5,6回目の内容をまとめて**モダンExcel**として行いたいと思います。
+4回目に特別講師の方の話が入っているため、二つまとめてやってしまおうかと思いましたが、やはりゆっくりやった方が良いと思いましたので、今回、来週の2回でモダンExcelを学修していきたいと思います。
+
+---
+## 今日利用するデータ
+ダウンロードしてください
+- [mr6_06.xlsx](mr6_06.xlsx)
+
 
 ---
 ## モダンExcel?
@@ -26,10 +44,9 @@ Excelではいわゆる「表計算」としての機能の他に集計などを
 
 そして、過去のやり方とは異なり、より**簡単にデータの収集や分析**が行える「モダンExcel」と呼ばれる機能がついています。
 
-今日はそのモダンExcelについて触れてみましょう。
-「モダンExcel」というに重要な機能は
-- Power Query
-- Power Pivot
+「モダンExcel」といわれるのに重要な機能は
+- Power Query(パワークエリー)
+- Power Pivot(パワーピボット)
 
 という機能であり、実はExcel2010あたりからアドイン(追加するプラグインのようなもの)で対応していましたが、Excel2016から標準搭載しています。
 
@@ -37,6 +54,105 @@ Excelではいわゆる「表計算」としての機能の他に集計などを
 
 マイクロソフトでは「PowerBI」というBI(ビジネス・インテリジェンス)ツールサービスも提供しています。
 モダンExcelの知識は最終的にPowerBIの利用にも役立つ知識となっています。
+
+以前はいろんな関数や、VBA(Visual Basic for Application...プログラミング言語)を利用しなければいけなかったことが、「ノーコード」「ローコード」にて利用できるようになっています。
+
+> ノーコード・ローコード
+> アプリケーションなどの開発を行う際にコードを書かない、もしくは少ないコードでも開発ができるというものです。
+
+前回Airtableを利用した際も、本当は「SQL言語」を使ってデータベースを操作するところ、あっという間にWebのフォームアプリケーションまで作成できました。
+プログラミングによる開発も個人的にはまだまだ重要だと考えていますが、「ノーコード」「ローコード」の流れは止まらないと考えています。
+楽にできることは楽に処理しましょう。
+
+## コンピュータ演習のおさらい・モダンExcelに入る前に知っておいてほしいこと
+1年生からまともにExcelに触っていない人も多いかと思います。
+おさらいから始めましょう。
+
+---
+### Officeのバージョンについて
+Officeの基本的な機能を使うだけであれば、そんなに細かくバージョンについて知る必要がありません。
+ところが、新しい機能は新しいバージョンでなければ利用できません。まずはバージョンの確認方法について知りましょう。(網羅できてるか不安ですが...)
+
+ちょっと、全員のバージョン確認したいので、TeamsにOSとバージョン、ライセンスを貼ってみてください。
+
+#### Macの人
+Excelを起動して、**Excelメニュー**から**バージョン情報**を確認しましょう。
+ライセンス、バージョンのところを見てください。
+
+#### Windowsの人
+新規でなんかファイル開いて、**ファイル-アカウント**で「ライセンス認証された製品」「バージョン情報」のところ見てください。
+
+### 見方
+#### 製品エディション
+- Microsoft Office Home
+- Microsoft Office Professional
+- Microsoft Office Business
+
+などさまざまなエディションがあります。
+
+#### 数字
+- 2003
+- 2007
+- 2010
+- 2013
+- 2016
+- 2019
+- 2021
+
+等3年おきに大きなバージョンが出ています。
+これは発売された年代をされています。
+
+- Microsoft 365(さんろくご)
+
+というのがあります。
+これは、Microsoftが提供しているクラウドサービスの名称で年代ではありません。
+これば、最新のOffice製品をダウンロードしても使えるという仕様になっています。
+バージョンは「最新版」としか言いようがありません。(一応数字ついてますけど)
+
+最新版のため機能は頻繁に拡張されています。
+
+わかりにくいですが
+- 年代のついているもの：永続ライセンスでありずっと使えるがどんどん古くなっていく
+- Microsoft 365：サブスクリプションで常に最新の機能が利用できる
+
+という風になっています。
+
+---
+### ピボットテーブル
+集計方法について少し説明します。
+> 単純集計
+> 設問毎に回答結果を集計し、何人が回答したのか、各選択肢の内訳はどうなのかを表示する手法
+
+> クロス集計
+> 2つ以上の質問項目の回答内容をかけ合わせ、回答者属性ごとの反応の違いを見るようなときに用いる集計方法
+
+#### 単純集計の方法
+mr6_06.xlsxを開いて「単純集計」シートを開いてください。
+集計の表を埋めてみましょう。
+
+え、ヒント？
+COUNTIFを使ってみましょう。絶対参照も覚えていますか？
+
+答え
+<p style="color:#151515">
+<dl>
+<dt style="color:#151515">F5</dt><dd style="color:#151515">=COUNTIF($B$5:$B$24,E5)</dd>
+<dt style="color:#151515">F6</dt><dd style="color:#151515">上からオートフィル</dd>
+<dt style="color:#151515">F7</dt><dd style="color:#151515">=SUM(F5:F6)</dd>
+<dt style="color:#151515">G5</dt><dd style="color:#151515">=F5/$F$7</dd>
+<dt style="color:#151515">G6,G7</dt><dd style="color:#151515">上からオートフィル</dd>
+
+<dt>
+</dl>
+</p>
+
+
+
+
+
+### テーブル
+### スピル
+
 
 
 
