--- a/2022/MediaRepresentationVI/mr6_06.md
+++ b/2022/MediaRepresentationVI/mr6_06.md
@@ -18,6 +18,7 @@
       - [数字](#数字)
     - [ピボットテーブル](#ピボットテーブル)
       - [単純集計の方法](#単純集計の方法)
+      - [クロス集計の方法](#クロス集計の方法)
     - [テーブル](#テーブル)
     - [スピル](#スピル)
   - [提出について](#提出について)
@@ -141,21 +142,118 @@ COUNTIFを使ってみましょう。絶対参照も覚えていますか？
 <dt style="color:#151515">F7</dt><dd style="color:#151515">=SUM(F5:F6)</dd>
 <dt style="color:#151515">G5</dt><dd style="color:#151515">=F5/$F$7</dd>
 <dt style="color:#151515">G6,G7</dt><dd style="color:#151515">上からオートフィル</dd>
-<dt>
 </dl>
 </p>
 
+#### クロス集計の方法
+mr6_06.xlsxを開いて「単純集計」シートを開いてください。
 
+集計の表を作るにはどうしますか？
 
+関数を用いると非常に面倒くさいです。
+I,Sを選択して右クリックで「再表示」を選んでみましょう。
 
+考え方だけ説明します。
+1. 答えと性別をくっつけたデータを作る
+2. COUNTIFでそれを数えて、後は適当に合計させます。
 
+文字列同士をくっつけるには
+- &
+- CONCAT
+- CONCATNATE
+
+を使います。多少違いますが説明割愛します。
+
+面倒臭いですね。ここでピボットテーブルという便利な機能があります。(まだモダンExcelではない)
+
+1. JからRを選択して「表示しない」
+2. A4からC24を選択
+3. 挿入タブからピボットテーブル
+4. 作成先を既存のワークシートにしてT4をクリック,OK
+5. ピボットテーブルのフィールドが出てくる
+6. **答え**をドラッグして列に
+7. **性別**をドラッグして行に
+8. **個人ID**をドラッグして値に
+9. **合計/個人ID**の「i」をクリック
+10. 合計を個数にしてOK
+
+関数など面倒くさいこと考えずに集計されたことがわかったでしょうか？
+
+ピボットテーブルは集計に便利です。もっと色々なことができます。ぜひ興味ある人は見てみましょう。
+
+[ピボットテーブルの使い方！【図解付き】基本から応用まで分かりやすく解説](https://mainichi.doda.jp/article/2019/03/06/1479.html)
+
+---
 ### テーブル
+「テーブル」シートを選択しましょう。
+
+あれ、Q1と同じですね。
+
+21番目のデータを追加してみてください。
+
+集計結果変わりませんね。集計結果の式を変更しますか？
+面倒くさいですよね。
+
+こんな時に「テーブル」という機能もあります。使ってみましょう。
+
+1. 21番目のデータを一旦削除
+2. A4からB24を選択
+3. 挿入タブからテーブル,OK
+4. 21番目のデータを入れてみましょう。
+
+テーブルにしたら、集計結果変わりましたね。でも、ちょっと気持ち悪いですね。絶対参照なのに勝手に変わるなんて。もう一回やってみましょう。
+
+5. 集計2に計算式を入れていきます。
+6. Q1と同様にやってみましょう。F12,F13のみで構いません
+7. 式が「=COUNTIF(テーブル1[答え],E12)」 になっていませんか？
+8. 22番目のデータを入れてみましょう。
+
+テーブルを利用するのであれば、絶対参照より式として「テーブル使ってるよ」と分かるように
+
+1. 表をテーブルに
+2. それを元に集計
+
+とした方が、後で混乱しなくて良いと思います。
+
+テーブルの便利さはわかりましたか？
+
+---
 ### スピル
+Excel2021, Microsoft365から利用できる機能です。
+
+これまで、セルに計算式を入力すると、そのセルのみに値が入っていました。
+
+> スピル
+> 数式を入力したセルだけでなく、隣接するセルにも結果が表示される(スピルとは溢れる・溢れるという意味)
+
+意味わかりませんね。やってみましょう。
+
+「スピル」シートを選択してください。
+
+1. これまでA2からA5をB2からB5に式でコピーしたいときはB2に「=A2」としてオートフィルを使っていました。
+2. B2に「=A2:A5」と打ってみましょう。
+3. B3,B4,B5を見ると、計算式グレーですね。「ゴースト」と呼びます。
+4. 試しにB3を「=1」としてみましょう
+5. エラー出ましたね。ここには、式を入力していないからそうなっている、ということになります。
+6. スピルの合計を知りたいときはどうしたら良いでしょうか？
+7. C2に「=SUM(B2#)」としてみましょう。
+8. #をセル名の後につけることで、スピルの範囲を選べることがわかりますね。
+9. 表がテーブルだとどうなるでしょうか？
+10. A1からA5を選択してテーブルにしましょう。
+11. A6に500と入力してみましょう。反応しますね。
+
+スピルをもう少し実践的に使ってみるために、九九の表を作ってみましょう。
+
+1. B11に「=B10:J10*A11:A19」
+
+え、これだけでいいんですか！！！
+
+スピルの便利さわかったでしょうか？
+
 
 
 
 
 
 ## 提出について
-メモをマークダウンで記述してPDFにしたものを提出とします。
-
+今日は作業したExcelのファイル名を学籍番号に変えて、それで提出としましょう。
