--- a/2022/MediaRepresentationVI/mr6_06.md
+++ b/2022/MediaRepresentationVI/mr6_06.md
@@ -21,7 +21,7 @@
       - [クロス集計の方法](#クロス集計の方法)
     - [テーブル](#テーブル)
     - [スピル](#スピル)
-  - [きりがいいから...](#きりがいいから)
+  - [Excelを利用する上での考え方](#excelを利用する上での考え方)
   - [提出について](#提出について)
 
 ---
@@ -250,11 +250,34 @@ Excel2021, Microsoft365から利用できる機能です。
 
 スピルの便利さわかったでしょうか？
 
+## Excelを利用する上での考え方
+ここまで、Excelのいろんな機能について説明してきました。(モダンExcelには入れていないですが)
 
+実際にデータを集計するときのことを考えてみましょう。
+- 毎日の各支店での商品の売り上げ個数のデータ
 
-## きりがいいから...
-Excelには楽な機能がたくさんあることが理解できたでしょうか？
-モダンExcelの機能、PowerQuery,PowerPivotについてはまだ入っていませんが、きりが良いので今日はここまでとしましょう。
+これを集計するには、自分が今何の作業をしているのかを明確に理解して考える必要があります。
+
+1. 入力データ：元データの準備
+2. 計算：抽出・分類・計算・加工
+3. 出力：なんらかの成果物
+
+なんのためにデータを操作しているのかを明確に意識しましょう。簡単にいうと
+- 後で情報を処理するためのデータを作成している(入力)
+- 人が見やすいデータを作成している(出力)
+
+後者の場合は、見やすければ良いですが、前者(入力データ)ではやってはいけないことがあります。
+
+- はセル結合するな
+
+です。
+
+- [あなたのそれ、間違ってますよ。Excelには、正しい使い方があるんです！](https://www.youtube.com/watch?v=BFJMzjlFpMw&t=640s)
+
+この考えをしっかり持った上で、次週いよいよモダンExcelに入っていきましょう。
+
+今日わかったように、新しいことを使えるようになると、作業自体は楽になっていきます。
+
 
 
 ## 提出について
