--- a/2022/ComputerPractice/cp_25.md
+++ b/2022/ComputerPractice/cp_25.md
@@ -13,6 +13,7 @@
   - [26,27,28回目の発表について](#262728回目の発表について)
   - [テスト問題について](#テスト問題について)
   - [提出](#提出)
+  - [授業後追記](#授業後追記)
 
 
 ---
@@ -38,3 +39,10 @@
 
 ## 提出
 manabaのレポートから発表用資料を26回目までに提出しておいてください。
+
+## 授業後追記
+Finderのラベル機能便利です。
+
+[キーボードショートカットを使ってMacのFinderでタグ（ラベル）付けする方法](https://shimesan.com/2019/12/07/mac-finder-tag-keybord-shortcuts/)
+
+
