--- a/2022/MediaRepresentationVI/mr6_09.md
+++ b/2022/MediaRepresentationVI/mr6_09.md
@@ -184,7 +184,7 @@ Shareから
 #### リンク集
 - 就活情報ホームから+してDatabaseのTableを選択
 - Add Icon, Add Cover, Add Descriptionを適当に作成します。
-- Text 「サイト名」
+- Title 「サイト名」
 - URL 「URL」
 - Tableをリンク集
 としましょう。
@@ -198,10 +198,13 @@ Shareから
 #### 企業一覧
 - 就活情報ホームから+してDatabaseのTableを選択
 - Add Icon, Add Cover, Add Descriptionを適当に作成します。
-- Text 「企業名」
+- Title 「企業名」
 - Select 「業界」
 - Select 「志望度」
 - Select　「選考状況」
+- URL 「URL」
+- URL 「MyPage」
+- Text 「MyPage ID/PW」
 としましょう。
 
 データとして企業名に「A社」「B社」「C社」など適当に入力。
@@ -216,7 +219,7 @@ Shareから
 #### エントリーシート一覧
 - 就活情報ホームから+してDatabaseのTableを選択
 - Add Icon, Add Cover, Add Descriptionを適当に作成します。
-- Text 「内容」
+- Title 「内容」
 - Relation 「企業一覧」
 - Select 「状況」
 
@@ -241,7 +244,7 @@ TODO:
 - 就活情報ホームから+してDatabaseのTableを選択
 - Add Icon, Add Cover, Add Descriptionを適当に作成します。
 - Checkbox 「Done」
-- Text 「タスク」
+- Title「タスク」
 - MultiSelect 「タグ」
 - Date 「期日」 Formatを「Year/Month/Day」に
 - Relation「企業一覧」
