--- a/2022/ComputerPractice/cp_29.md
+++ b/2022/ComputerPractice/cp_29.md
@@ -10,7 +10,6 @@
 - [コンピュータ演習 29. Excelテスト](#コンピュータ演習-29-excelテスト)
   - [目次](#目次)
   - [スライド](#スライド)
-  - [テスト問題について](#テスト問題について)
   - [提出](#提出)
 
 
@@ -20,14 +19,8 @@
 
 [スライド資料](./cp_29slide.pdf){:target="_blank"}
 
-## テスト問題について
-29回目に行います。クリアーできなければ30回目に再テスト
-
-- [問題](./file/test2022.pdf)
-- [攻略スクリーンキャスト](https://www.youtube.com/watch?v=d5YuKClpnB4){:target="_blank"}
-
 ## 提出
-発表用資料はmanabaのレポート25回目のところに提出してください。
+Excelのファイルはmanabaからチェックを受けたら提出してください。
 
 
 
