--- a/2022/MediaRepresentationV/mr5_04.md
+++ b/2022/MediaRepresentationV/mr5_04.md
@@ -22,6 +22,7 @@
     - [skinモディファイアを使ったモデリング](#skinモディファイアを使ったモデリング)
     - [Armatureを作成してみよう](#armatureを作成してみよう)
   - [今日もお疲れ様でした。](#今日もお疲れ様でした)
+  - [授業後追記](#授業後追記)
 
 ---
 
@@ -111,4 +112,9 @@ Scaleが1以外の場合、モディファイアが当たってからScaleされ
 ---
 ## 今日もお疲れ様でした。
 - 今日学んだことを使って、いろいろ作成してみよう。
-- 
+
+
+---
+---
+## 授業後追記
+- [【10分で】Blenderの56ものモディファイアすべて紹介!!](https://www.youtube.com/watch?v=FMC0Ktj_7_M)
