--- a/2022/MediaRepresentationVI/mr6_10.md
+++ b/2022/MediaRepresentationVI/mr6_10.md
@@ -1,4 +1,4 @@
-# メディア表現 VI 10.
+# メディア表現 VI 10.プロジェクト管理
 
 [メディア表現 VI TOP に戻る](./index.md)
 
@@ -6,337 +6,52 @@
 
 ## 目次<!-- omit in toc -->
 
-- [メディア表現 VI 10.](#メディア表現-vi-10)
-  - [Notion](#notion)
-    - [Notionとは？](#notionとは)
-    - [ログイン](#ログイン)
-    - [日本語化](#日本語化)
-    - [Notionの基本](#notionの基本)
-      - [ページとブロック](#ページとブロック)
-      - [利用できるブロック](#利用できるブロック)
-      - [ブロックの並べ替え](#ブロックの並べ替え)
-      - [ページとサブページ](#ページとサブページ)
-      - [データベース](#データベース)
-      - [データベースのビュー](#データベースのビュー)
-      - [テンプレート](#テンプレート)
-      - [ワークスペース](#ワークスペース)
-      - [コンテンツの共有](#コンテンツの共有)
-    - [就活ノートを作ってみよう](#就活ノートを作ってみよう)
-      - [考え方](#考え方)
-      - [インターフェイスについて](#インターフェイスについて)
-      - [トップページの作成](#トップページの作成)
-      - [リンク集](#リンク集)
-      - [企業一覧](#企業一覧)
-      - [エントリーシート一覧](#エントリーシート一覧)
-      - [就活ノート](#就活ノート)
-      - [タスク管理](#タスク管理)
-      - [企業一覧に追加](#企業一覧に追加)
-      - [ホーム](#ホーム)
-      - [使ってみよう。](#使ってみよう)
+- [メディア表現 VI 10.プロジェクト管理](#メディア表現-vi-10プロジェクト管理)
+  - [Slack](#slack)
+    - [Slackとは？](#slackとは)
+  - [Notion続き](#notion続き)
     - [まとめ](#まとめ)
 
 ---
 
-TODO:
-2人くらいしか終われてない。多くが、動画1本目もできてない。
-ので、引き続き、やっていく。
-
-終わったの2人。この二人のために、なんかネタ考えておこう。
-
 
 ## 本日の内容<!-- omit in toc -->
-- 【第9回】情報管理 情報を一括で管理できるNotionについて学修する。
+- 【第10回】プロジェクト管理 Slackを用いたプロジェクト管理について学修する。
+
+となっていますが、Slackの紹介をしてから、前回の続きとしましょう。
+前回の終わっている人は、実際に就活ノートを利用し始めたり、新たなノート作りをやっていきましょう。
 
 ---
 ## 前回のおさらい<!-- omit in toc -->
-Googleの様々なツールを試してみました。
-うまく使っていきましょう。
+Notionの使い方自体はそんなに難しくなかったと思いますが、実は
+- データベースの設計
+- 統合
+
+という作業だったので、時間がかかっていますね。
 
 ---
-## Notion
-### Notionとは？
-Notionは、世界中で2000万人以上、数十万のチームが利用するコラボレーションソフトウェア。
-2022/11/10に日本語版が[正式リリース](https://internet.watch.impress.co.jp/docs/news/1454803.html){:target="_blank"}。
+## Slack
+### Slackとは？
+- [Slack とは何でしょう？](https://www.youtube.com/watch?v=GTG-3OQArVQ)
 
-まずは[紹介動画](https://www.notion.so/ja-jp/help/start-here){:target="_blank"}を見てみましょう。
+Teamsもチャットをベースに様々な機能が利用できるツールです。
 
-デスクトップアプリも、スマホ用のアプリもあるので便利です。
+SlackもTeamsもどちらもコミュニケーションツールであることには変わりありません。
 
-なお、このサービスも日々アップデートされています。
+TeamsはOffice 365を利用する企業が、チームワークを向上できるように開発されました。
 
-### ログイン
-[https://www.notion.so/ja-jp/product](https://www.notion.so/ja-jp/product)
+違いは
+- 多人数のビデオ会議利用が多いなら、Microsoft Teams
+- テキストコミュニケーション重視なら、Slack
 
-の「Notionを無料で使ってみる」から登録してみましょう。
+としている見方が多い模様です。
 
-大学メールで登録すると、パーソナルプランが無料で利用できます。詳しくは[こちら](https://extns.notion.site/775f1673a3b147ec85294ccdac9a04b0){:target="_blank"}
 
----
-[![](https://img.youtube.com/vi/FKLpe4vuQ1A/0.jpg)](https://www.youtube.com/watch?v=FKLpe4vuQ1A)
 
-### 日本語化
-日本語インターフェイスになっていない人は、次のようにしましょう。
-- サイドバーのSetting & Membersをクリック
-- Language & RegionのLanguageを日本語に
 
-まだ環境によってはバグが残っているような気がします。
 
----
-### Notionの基本
-#### ページとブロック
-まず基本として**ページ**という考え方があります。
-> **ページ**は**ブロック**(テキストや画像、テーブルなど、ページに追加するコンテンツ)を無限に入れられる箱のようなもの
+## Notion続き
 
-- 追加できるコンテンツは+ボタンまたは「/」で表示される
-
-#### 利用できるブロック
-- 基本のブロック
-  - テキスト
-  - ページ(ページの中にサブページを作成)
-  - ToDoリスト
-  - 見出し1から3
-  - 箇条書き
-  - 番号付きリスト
-  - トグルリスト(表示/非表示が可能)
-  - 引用
-  - 区切り線
-  - ページへのリンク
-  - コールアウト(図表などに注意を向けさせるため)
-- インラインブロック
-  - 人のメンション
-  - ページのメンション
-  - 日付またはリマインダー
-  - 絵文字
-  - 数式
-- データベース
-  - テーブルビュー
-  - (看板)ボードビュー
-  - ギャラリービュー
-  - リストビュー
-  - カレンダービュー
-  - タイムラインビュー
-  - インラインデータベース
-  - フルページデータベース
-  - データベースへのリンク
-- メディアブロック
-  - 画像
-  - Webページブックマーク
-  - 映像
-  - 音声
-  - コード
-  - ファイル
-
-#### ブロックの並べ替え
-ブロックはブロックハンドルを利用して自由にドラッグ&ドロップで入れ替えることができます。
-
-
-#### ページとサブページ
-左下の**新規ページ**から作成することができます。
-
-- 新規ページ - 空のページを作ってみましょう。
-- タイトルを「無題」の中に「テスト」と入力しましょう。
-- タイトルの上の「アイコンを追加」でページのアイコンをつけてみましょう。
-- タイトルの上の「カバー画像を追加」でページのカバー画像をつけてみましょう。Unsplashタブにすると、検索することもできます。
-- 左のページの「+」ボタンを押してサブページを作ってみましょう。
-- 適当にブロックを追加してみましょう。
-
-Notionではフォルダの代わりにこのサブページを利用します。
-並べ替えなどはドラッグ&ドロップで可能です。
-
-[![](https://img.youtube.com/vi/BoS5eTbqJjA/0.jpg)](https://www.youtube.com/watch?v=BoS5eTbqJjA)
-
-#### データベース
-Notionのデータベースはページの一覧のようなものです。
-
-そのほかにプロパティと呼ばれる箱を用意することもできます。
-
-プロパティを利用して、検索・並べ替え・フィルター(絞り込み)を行うことができます。
-
-#### データベースのビュー
-データベースの見方はビューといい
-- テーブル
-- リスト
-- ボード
-- カレンダー
-- ギャラリー
-- タイムライン
-
-と目的に応じて切り替えることができます。
-[【Notion】Database の６種類のViewのそれぞれの特徴と使い所](https://create-new-air.com/blog/notion/1631/){:target="_blank"}
-
-#### テンプレート
-Notionでは複製やカスタマイズ用に50以上のテンプレートを用意しています。
-
-左下の**テンプレート**をクリックして、適当に一つ選んでみましょう。
-
-[テンプレートギャラリー](https://www.notion.so/ja-jp/templates){:target="_blank"}にもあります。
-
-**学生・教育者関係**の**大学**を複製して、少し触ってみましょう。
-
-#### ワークスペース
-ページを複数保持できるのがワークスペースという考え方です。
-
-個人として一人で利用してもいいですし、共同作業者を指定してチームで共有することもできます。
-
-#### コンテンツの共有
-Shareから
-- 他の人と共有(メールアドレス)
-- チームと共有(有料)
-- Webで共有
-
-を選ぶことができます。
-
----
----
-### 就活ノートを作ってみよう
-オフィシャルのテンプレートに「就活ノート」がありますが、これを参考に一から作ってみましょう。
-
-こういうデータベース系のものって、データも少し入力しないとあまり意味がないので、枠組みと同時に仮データも入力していきます。
-
-#### 考え方
-就活をする上で次のような情報を扱う必要があります。
-- リンク集
-- 就活ノート(考えたことを残しておく)
-- 企業一覧
-- エントリーシート
-- タスク管理
-
-それぞれのデータベースを作成し、それを統合させましょう。
-リレーションも可能です。
-
-#### インターフェイスについて
-安定しないので、とりあえず英語版で書いていきます。
-- Add Icon:  アイコンを追加
-- Add Cover: カバー画像を追加
-- Add Description: 説明を追加
-
----
-[![](https://img.youtube.com/vi/kNqPnOIAgbQ/0.jpg)](https://www.youtube.com/watch?v=kNqPnOIAgbQ)
-
-#### トップページの作成
-- 「就活情報ホーム」を**NewPage**から作成しましょう。
-- Add Icon, Add Cover, Add Descriptionを適当に作成します。
-
-#### リンク集
-- 就活情報ホームから+してDatabaseのTableを選択
-- Add Icon, Add Cover, Add Descriptionを適当に作成します。
-- Title 「サイト名」
-- URL 「URL」
-- Tableをリンク集
-としましょう。
-
-データとして,「マイナビ2024」https://job.mynavi.jp/2024/
-を入力しておきましょう。
-
-左上のTableを右クリックでRename,リンク集としておきましょう。
-
-
-#### 企業一覧
-- 就活情報ホームから+してDatabaseのTableを選択
-- Add Icon, Add Cover, Add Descriptionを適当に作成します。
-- Title 「企業名」
-- Select 「業界」
-- Select 「志望度」
-- Select　「選考状況」
-- URL 「URL」
-- URL 「MyPage」
-- Text 「MyPage ID/PW」
-としましょう。
-
-データとして企業名に「A社」「B社」「C社」など適当に入力。
-
-業界のところに、興味ある業界を「IT」「映像」等と登録しておきましょう。
-志望度のところに「興味あり」「第一志望郡」「第二志望郡」「第一志望」を登録しておきましょう。
-選考状況のところ「興味あり」「説明会」「書類提出」「書類通過」「一次通過」「ニ次通過」「三次通過」「四次通過」「合格」「不合格」を登録しておきましょう。
-
-左上のTableを右クリックでRename,企業一覧としておきましょう。
-
-
-#### エントリーシート一覧
-- 就活情報ホームから+してDatabaseのTableを選択
-- Add Icon, Add Cover, Add Descriptionを適当に作成します。
-- Title 「内容」
-- Relation 「企業一覧」
-- Select 「状況」
-
-状況のところに「未提出」「提出中」「不通過」「通過」を登録しておきましょう。
-
-データとして「履歴書共通：自己PR」「履歴書共通：授業」「履歴書共通：ガクチカ」「A社ES」を入力しておきましょう。
-
-それぞれ、OPENを押して、適当に文字を打っておきましょう。
-
-左上のTableを右クリックでRename,エントリーシート一覧としておきましょう。
-
-
-#### 就活ノート
-- 就活情報ホームから+してDatabaseのListを選択
-- Add Icon, Add Cover, Add Descriptionを適当に作成します。
-- 項目をとりあえず「自分がやりたいこと」「グループワークについて」「面接について」に変えておきましょう。
-
-左上のList viewを右クリックでRename,就活ノートとしておきましょう。
-
-#### タスク管理
-- 就活情報ホームから+してDatabaseのTableを選択
-- Add Icon, Add Cover, Add Descriptionを適当に作成します。
-- Checkbox 「Done」
-- Title「タスク」
-- MultiSelect 「タグ」
-- Date 「期日」 Formatを「Year/Month/Day」に
-- Relation「企業一覧」
-
-タグのところに「自己分析」「業界研究」「企業研究」「インターンシップ」「説明会」「ES」「選考」を登録しておきましょう。
-
-データに「A社説明会/説明会」「A社ES提出/ES」「A社一次面接/選考」として、期日に適当に入力しましょう。企業一覧は全部A社に。説明会・ESはDoneにチェックを入れておきましょう。
-
-左上のTableを右クリックでRename,タスク一覧としておきましょう。
-
-+してカレンダービューを追加して、カレンダーと名前をつけておきましょう。
-
-
-#### 企業一覧に追加
-- Relation「タスク管理」
-- Relation「エントリーシート」
-
-A社のところのタスク管理、エントリーシートに該当するものを登録しましょう。
-
----
-[![](https://img.youtube.com/vi/_xqz99nSsTk/0.jpg)](https://www.youtube.com/watch?v=_xqz99nSsTk)
-
-#### ホーム
-既にサブページへのリンクがあると思います。
-
-タイトルの下に+で下の方の「2 columns」を追加しましょう。
-左右に追加できるようになりました。
-
-左にcalloutで「各ページへのリンク」を作成しましょう。
-
-右に+でCalendar View, タスク管理のカレンダーとしましょう。
-
-既にあるサブページのリンクを左に移動しましょう(一つずつ)。
-
-一番下にcalloutで「ダッシュボード」を作りましょう。
-
-- タスク管理(Table View)
-- 企業一覧(Table View)
-- エントリーシート一覧(Table View)
-- 就活ノート(List View)
-- リンク集(Table View)
-
-を順に作りましょう。(データベースをタブで切り替えもできるらしいのですが、まだバグが結構ありそうです)
-
-タスク管理で、FilterでDone: Uncheckedとすると、終わっていないものが表示されます。Sortで期日Ascendingとすると、期日順に並びます。
-
-企業一覧でFilter 選考状況で「不合格」以外にチェックを入れましょう。
-不合格のものが表示されなくなります。
-
-右上の「...」からFull WidthをONにした方が見やすいかもしれません。
-
-#### 使ってみよう。
-カレンダーでタスクをクリックすると右からサイドページとして表示されます。
-
-テーブルやリストビューも、OPENのマークをクリックですぐに表示ができます。
-
----
 ### まとめ
 いかがだったでしょうか？
 ここまで自分で作成していれば、もう少し使いやすくしたい、等と思っても問題なくできるかと思います。
