--- a/2022/MediaRepresentationVI/mr6_11.md
+++ b/2022/MediaRepresentationVI/mr6_11.md
@@ -28,7 +28,13 @@
         - [ブランチ](#ブランチ)
         - [マージ](#マージ)
     - [GitHubとは？](#githubとは)
-    - [やってみよう](#やってみよう-1)
+    - [使ってみよう](#使ってみよう)
+      - [gitのインストール](#gitのインストール)
+      - [gitの初期設定](#gitの初期設定)
+      - [GitHubのアカウントを作成しよう](#githubのアカウントを作成しよう)
+      - [GitHub上でリモートリポジトリを作成しよう](#github上でリモートリポジトリを作成しよう)
+      - [VSCodeでクローンする](#vscodeでクローンする)
+      - [ローカルリポジトリにファイルを追加してプッシュまで](#ローカルリポジトリにファイルを追加してプッシュまで)
   - [参考](#参考)
 
 ---
@@ -225,9 +231,67 @@ Web用のUIがあるため、便利に利用することができます。
 
 そして2018年にはマイクロソフトが買収を行いました。
 
-### やってみよう
+### 使ってみよう
+OSのバージョン等によって差がありそうですが、やってみましょう。
+
+#### gitのインストール
+1. Command+スペースで**terminal**と入力して、terminal.app(ターミナル)を開く
+2. **git -- version**と入力してリターンと押すと、コマンドラインツールをインストールするように促されるので、インストール
+3. 改めて**git -- version**でバージョンが出ればインストール完了
+
+#### gitの初期設定
+自分が誰かを設定しておきましょう。
+
+> git config --global user.name "ユーザーネーム"
+> 
+> git config --global user.email "eメールアドレス"
+
+とターミナルで入力しておきましょう。ユーザーネーム、日本語やめておきましょう。例えばこんな感じです。
+
+>$ git config --global user.name "John Doe"
+>
+>$ git config --global user.email johndoe@example.com
+
+
+#### GitHubのアカウントを作成しよう
+1. [GitHub](https://github.co.jp)にアクセス
+2. **GitHubの登録**の緑ボタンをクリック
+3. ユーザ名・メールアドレス・パスワードを入力して、人間であることを証明してくださいw。ユーザ名はドメインにも使われます。(sammypprのように)
+4. 「Welcome to GitHub」と表示されて何点か質問されますが、スルーしてもOKそうです。「Complete setup」をクリックしましょう。
+5. メールが届くので、「Verify email address」をクリックして終わりです。
+
+#### GitHub上でリモートリポジトリを作成しよう
+最近挙動が違うかもしれませんが...
+1. **Create repository**をクリック
+2. **name your new repository...**のところに**test-git**
+3. Publicを選択
+4. Add a README fileにチェック
+5. **Create repository**をクリック
+6. Codeをクリックすると、リモートリポジトリのURLが表示されるので、URL右のボタンを押して、コピーしておきましょう。
+
+#### VSCodeでクローンする
+1. VSCodeで新しいウィンドウ
+2. アイコンの上から3番目をクリック
+3. Clone Repositoryをクリック
+4. コピーしたURLをペーストしてClone from GitHubをクリック
+5. 許可を求めてくるので、許可(Allow)
+6. ブラウザでサインイン
+7. VSCodeを開くか聞かれたら開く
+8. OK
+9. もう一度Clone Repository
+10. ローカルリポジトリの場所を指定してクローン
+
+#### ローカルリポジトリにファイルを追加してプッシュまで
+1. アイコンの一番上をクリック
+2. **test.txt**としてファイルを作り、なんでもいいので、中身を書いて保存しましょう。
+3. 上から3番目のアイコンをクリック
+4. Changesにtest.txtがあるはずです。ファイル名右の+を押すと、StagedChangesに移ります。これ、説明したインデックスのところです。一時的においておきます。
+5. Messageに**初めてのコミット**とか書いてSync Changesとすると、プッシュされリモートリポジトリに変更が反映されます。
+6. 
 
 
 
 ## 参考
-[【初心者向け】Gitとは何なのか。基本用語やその仕組みをまとめています。](https://tcd-theme.com/2019/12/what-is-git.html)
+- [【初心者向け】Gitとは何なのか。基本用語やその仕組みをまとめています。](https://tcd-theme.com/2019/12/what-is-git.html)
+- [完全初心者向けGitHub超入門！使い方と3つの学習方法を紹介](https://www.sejuku.net/blog/8224)
+- [VSCodeでGitの使い方！（クローンからプッシュ、履歴確認など）](https://codelikes.com/vscode-git/)
