--- a/2022/MediaRepresentationVI/mr6_11.md
+++ b/2022/MediaRepresentationVI/mr6_11.md
@@ -35,6 +35,7 @@
       - [GitHub上でリモートリポジトリを作成しよう](#github上でリモートリポジトリを作成しよう)
       - [VSCodeでクローンする](#vscodeでクローンする)
       - [ローカルリポジトリにファイルを追加してプッシュまで](#ローカルリポジトリにファイルを追加してプッシュまで)
+      - [コミットの確認](#コミットの確認)
   - [参考](#参考)
 
 ---
@@ -286,8 +287,12 @@ OSのバージョン等によって差がありそうですが、やってみま
 2. **test.txt**としてファイルを作り、なんでもいいので、中身を書いて保存しましょう。
 3. 上から3番目のアイコンをクリック
 4. Changesにtest.txtがあるはずです。ファイル名右の+を押すと、StagedChangesに移ります。これ、説明したインデックスのところです。一時的においておきます。
-5. Messageに**初めてのコミット**とか書いてSync Changesとすると、プッシュされリモートリポジトリに変更が反映されます。
-6. 
+5. Messageに**初めてのコミット**とか書いてCommit。次にSync Changesとすると、プッシュされリモートリポジトリに変更が反映されます。
+6. これを2,3回違う名前でやってみましょう。
+
+#### コミットの確認
+
+
 
 
 
