--- a/2022/MediaRepresentationVI/mr6_11.md
+++ b/2022/MediaRepresentationVI/mr6_11.md
@@ -36,6 +36,7 @@
       - [VSCodeでクローンする](#vscodeでクローンする)
       - [ローカルリポジトリにファイルを追加してプッシュまで](#ローカルリポジトリにファイルを追加してプッシュまで)
       - [コミットの確認](#コミットの確認)
+    - [GitHubでできること](#githubでできること)
   - [参考](#参考)
 
 ---
@@ -288,10 +289,30 @@ OSのバージョン等によって差がありそうですが、やってみま
 3. 上から3番目のアイコンをクリック
 4. Changesにtest.txtがあるはずです。ファイル名右の+を押すと、StagedChangesに移ります。これ、説明したインデックスのところです。一時的においておきます。
 5. Messageに**初めてのコミット**とか書いてCommit。次にSync Changesとすると、プッシュされリモートリポジトリに変更が反映されます。
-6. これを2,3回違う名前でやってみましょう。
+6. ファイルに追記して、Sync Changesまでを2,3回やってみましょう。メッセージも適当に中身変えましょう。
 
 #### コミットの確認
+コミットの履歴を見るために拡張機能入れます。
+1. 拡張機能でGit Historyを検索してインストール
+2. test.txtがアクティブな状態でCtrl+Shift+Pで**git log**と入力して、「Git: View History(git log)」を実行
+3. コミット履歴が表示されます。
+4. 古い方のコミットを押してからViewを押せば、その当時のファイルの内容を表示することができます。
 
+バージョン管理どうですか？？？
+
+### GitHubでできること
+元々gitはコマンドライン(ターミナル)で使うことを想定されていますが、VSCodeのおかげで少し難しさは消えたのではないでしょうか。
+
+ここまででいっぱいな気がするので、ここまでにしておきますが、
+- 複数人でのソース管理
+- ホームページの公開
+- マークダウンでのホームページの公開
+
+等もできます。
+
+ぜひ色々試してみてください。
+
+[GitHubを使ってMarkdown文書を５ステップでホームページとして公開する方法](https://qiita.com/MahoTakara/items/3800e9dc83b530d0a050)
 
 
 
