--- a/2022/MediaRepresentationVI/mr6_11.md
+++ b/2022/MediaRepresentationVI/mr6_11.md
@@ -244,16 +244,19 @@ OSのバージョン等によって差がありそうですが、やってみま
 #### gitの初期設定
 自分が誰かを設定しておきましょう。
 
-> git config --global user.name "ユーザーネーム"
-> 
-> git config --global user.email "eメールアドレス"
+```
+$ git config --global user.name "ユーザーネーム"
+$ git config --global user.email "eメールアドレス"
+```
 
-とターミナルで入力しておきましょう。ユーザーネーム、日本語やめておきましょう。例えばこんな感じです。
+とターミナルで入力しておきましょう。
+$マークは入力しません。スペースに気をつけましょう。
+ユーザーネーム、日本語やめておきましょう。例えばこんな感じです。
 
->$ git config --global user.name "John Doe"
->
->$ git config --global user.email johndoe@example.com
-
+```
+$ git config --global user.name "John Doe"
+$ git config --global user.email johndoe@example.com
+```
 
 #### GitHubのアカウントを作成しよう
 1. [GitHub](https://github.co.jp)にアクセス
