--- a/2022/DigitalDesignII/dd2_04.md
+++ b/2022/DigitalDesignII/dd2_04.md
@@ -62,6 +62,11 @@ Adobe Creative Cloudから**XD**をインストールしておきましょう。
 
 ---
 ## XDを使ってみよう
+注意！！！(2022/12/15調べ)
+AdobeがスターターキットやUIキットの配布をやめてしまった模様です。
+過去のものをなるべく、元の状態にしたものをここに置いておきます。
+[スターターキット](./adobe-xd-starter-kit-basic-mac.xd.zip)
+
 ### XDの紹介
 - [Adobe XD 紹介ページ](https://www.adobe.com/jp/products/xd.html){:target="_blank"}
 
