--- a/2022/DigitalDesignII/dd2_04.md
+++ b/2022/DigitalDesignII/dd2_04.md
@@ -17,6 +17,7 @@
     - [XD](#xd)
       - [インストール](#インストール-2)
   - [XDを使ってみよう](#xdを使ってみよう)
+    - [注意！！！(2022/12/15調べ)](#注意20221215調べ)
     - [XDの紹介](#xdの紹介)
     - [スターターキット](#スターターキット)
     - [課題](#課題)
@@ -62,14 +63,18 @@ Adobe Creative Cloudから**XD**をインストールしておきましょう。
 
 ---
 ## XDを使ってみよう
-注意！！！(2022/12/15調べ)
-AdobeがスターターキットやUIキットの配布をやめてしまった模様です。
+### 注意！！！(2022/12/15調べ)
+AdobeがスターターキットやUIキットの配布をやめてしまった模様です。(ページの作りが別物になっている...)
 過去のものをなるべく、元の状態にしたものをここに置いておきます。
 [スターターキット](./adobe-xd-starter-kit-basic-mac.xd.zip)
 
 現在、っぽいものは、
 [UI/UX 無料アセット](https://creativecloud.adobe.com/cc/discover/free-assets/?filter=ui-and-ux)
 にありますが、全く同じものは置いてありません。
+
+UIキットに関しては、
+- [Wires jp 2.0](https://www.behance.net/gallery/67284971/Wires-jp)
+等にはまだある模様です。 
 
 ### XDの紹介
 - [Adobe XD 紹介ページ](https://www.adobe.com/jp/products/xd.html){:target="_blank"}
