--- a/2022/DigitalDesignII/dd2_04.md
+++ b/2022/DigitalDesignII/dd2_04.md
@@ -76,6 +76,8 @@ UIキットに関しては、
 - [Wires jp 2.0](https://www.behance.net/gallery/67284971/Wires-jp)
 等にはまだある模様です。 
 
+以下の「XDの紹介」「スターターキット」のリンクは切れていますので、注意してください。
+
 ### XDの紹介
 - [Adobe XD 紹介ページ](https://www.adobe.com/jp/products/xd.html){:target="_blank"}
 
