--- a/2022/MediaRepresentationVI/mr6_13.md
+++ b/2022/MediaRepresentationVI/mr6_13.md
@@ -53,6 +53,7 @@
 思っているより、大変かもですが、相変わらず、コーディングはゼロとなります。
 やっていきましょう。
 
+![](img/bubble02_concept.jpg)
 
 1. サインアップ機能(ページ作成・ワークフロー設定)
 2. ログイン機能(ページ作成・ワークフロー設定)
@@ -63,8 +64,10 @@
 
 
 
-
+---
 ## サインアップ機能を作ろう
+[![](https://img.youtube.com/vi/nCQL_9PCLbI/0.jpg)](https://www.youtube.com/watch?v=nCQL_9PCLbI)
+
 ### サインアップページのデザイン
 1. bubble.ioにログインして、前回のプロジェクトを開きましょう。
 2. 左上のPage:indexをクリックして「Add a new page」
@@ -91,7 +94,10 @@
 10. email,passwordとも入力するとindexに戻ります。
 11. DataタブでAll Usersを見てみましょう。Emailが登録されていれば成功です。Passwordは見えないような仕様になっているみたいですね。
 
+---
 ## ログイン機能を作ろう
+[![](https://img.youtube.com/vi/EsmZyCzkO6k/0.jpg)](https://www.youtube.com/watch?v=EsmZyCzkO6k)
+
 ### ログインページの作成
 1. signupを複製してloginを作りましょう。
 2. Page:signupをクリックしてAdd a new pageでPage nameに「login」、Clone fromに「signup」としてCREATE
@@ -135,6 +141,8 @@
 
 ---
 ## プロフィール画面の追加
+[![](https://img.youtube.com/vi/uMv_x787ijY/0.jpg)](https://www.youtube.com/watch?v=uMv_x787ijY)
+
 ### プロフィール画面のデザイン
 1. Page:indexをクリックでAdd a new page。Page nameにprofile, Clone fromにlogin
 2. ボタン「ログイン」を「保存」、input「email」を「名前」(Content formatをtext)、input「password」を「自己紹介」。自己紹介を右クリックで、Replace the element type, Multine input
@@ -171,9 +179,9 @@
 10. DataのMake changes to thing
 11. Thing to changeにCurrent Page User
 12. Change another filedを3回押して、image = PictureUploader Current Page User's 'svalue, name = Input Current Page User's 's value, memo = MultilineInput Current Page User's 's value
-13. アイコンに画像を反映させ、前に戻る機能を追加しましょう。
-14. アイコンをクリックしてDynamic imageからInsert Dynamic Data, Current User's image
-15. アイコンのStart/Edit workflow
+13. ヘッダーのimageに画像を反映させ、profileの前に戻る機能を追加しましょう。
+14. ヘッダーのimageをクリックしてDynamic imageからInsert Dynamic Data, Current User's image
+15. profileの戻る矢印アイコンのStart/Edit workflow
 16. navigation の Go to previous page
 17. previewでうまく動くか確認してみましょう。
 
