--- a/2022/MediaRepresentationVI/mr6_13.md
+++ b/2022/MediaRepresentationVI/mr6_13.md
@@ -180,7 +180,7 @@
 11. Thing to changeにCurrent Page User
 12. Change another filedを3回押して、image = PictureUploader Current Page User's 'svalue, name = Input Current Page User's 's value, memo = MultilineInput Current Page User's 's value
 13. ヘッダーのimageに画像を反映させ、profileの前に戻る機能を追加しましょう。
-14. ヘッダーのimageをクリックしてDynamic imageからInsert Dynamic Data, Current User's image
+14. ヘッダーのimageをクリックしてDynamic imageからInsert Dynamic Data, Current User's image。(調整しておこう。AppearanceのRun-mode renderingをZoom、LayoutのVertical alignmentをセンターに)
 15. profileの戻る矢印アイコンのStart/Edit workflow
 16. navigation の Go to previous page
 17. previewでうまく動くか確認してみましょう。
