--- a/2022/MediaRepresentationVI/mr6_14.md
+++ b/2022/MediaRepresentationVI/mr6_14.md
@@ -15,6 +15,7 @@
   - [紐付けによる修正](#紐付けによる修正)
     - [Tweetボタンの処理の変更](#tweetボタンの処理の変更)
     - [index画面の変更](#index画面の変更)
+    - [その他](#その他)
   - [まとめ](#まとめ)
 
 ---
@@ -44,24 +45,14 @@
 
 ---
 ## 今日の流れ
-TODO:
-基本は、ユーザをシステムが認識させる機能を作りましょう。
+現在、
+> 誰がツイートしているかわからない
 
-アプリを考えるときに、XD等で遷移を作ったかもしれませんが、ノーコードでは実際にデータベースとの連携になるため、その分は大変になります。
+状態となります。
+1. データベースで誰がツイートしているかを扱えるように拡張
+2. 画面にそれを実装
 
-思っているより、大変かもですが、相変わらず、コーディングはゼロとなります。
-やっていきましょう。
-
-![](img/bubble02_concept.jpg)
-
-1. サインアップ機能(ページ作成・ワークフロー設定)
-2. ログイン機能(ページ作成・ワークフロー設定)
-3. ユーザ用のアイコンをindexに追加して、メニュー作成
-4. アイコンクリックのメニュー表示非表示設定
-5. ログインしていないユーザは強制的にログインページへ
-6. プロフィール機能(ページ作成・データベース拡張)
-
-
+の流れで行ってみましょう。
 
 ---
 ## TweetとUserのデータベースを紐付けよう
@@ -75,7 +66,7 @@ Tweetにユーザ情報を書き込む項目を追加しましょう。
 email, passwordを入力して登録しましたが、どうやってシステムではユーザ情報を管理し、他とは異なる、ということを管理しているのでしょうか？
 1. DataタブのApp dataタブを開く
 2. All Usersを選択して項目を確認しても、「これが唯一」とわかる項目は見つからない
-3. 一つのレコード(データ)の鉛筆をクリックすると「Unique id」が表示されている。これは選択可能だが、編集できない。これがこのデータを唯一のものとしているidとなる
+3. 一つのレコード(データ)の鉛筆をクリックすると「Unique id」が表示されている。これは選択可能だが、編集できない。これがこのデータを唯一のものとしているidとなる。データベースにおいてはこのユニークIDというのを持つことが多い。
 4. Unique idをコピーする
 
 emailで個人を特定できる、という考え方もありますが、(今回実装しませんが)emailの変更に対応できなくなるためUnique id(唯一のID)が必要となります。
@@ -96,7 +87,7 @@ Tweetした時にUser情報を書き込むように変更仕様
 ### index画面の変更
 Repeating Groupのメッセージにメッセージだけでなく、Tweet者のアイコン・名前・メッセージを表示させましょう。
 
-構造は現在
+構造は現在、
 Repeting Group Tweet - Group Tweet - Text Parent group's Tweet
 になっているので、Group Tweetの中にアイコン・名前を表示するようにそれぞれ追加してみましょう。
 
@@ -104,9 +95,13 @@ Repeting Group Tweet - Group Tweet - Text Parent group's Tweet
 
 previewして動作を確認してみましょう。
 
+### その他
+ヘッダーに機能してない項目あるので、消したりして最終系を目指しましょう。
+
 ---
 ## まとめ
 - コーディングを行わずにアプリ開発をできる環境ができていることが理解できたでしょうか？
+- 仕様を決めずに柔軟に機能追加をしながら(アジャイル)開発を進めていることも理解できたでしょうか？
 - Wordpressもホームページのノーコードツールと言えます。
 - でも、ツールがあっても結局人の頭が考えなくてはいけないところがあります。
 
@@ -114,7 +109,7 @@ previewして動作を確認してみましょう。
 
 > どう解決するか？
 
-これを実際に形にするのが開発であり、ノーコードツールであり、この問題自体を解決するものでない、ということは意識しましょう。
+これを実際に形にするのが開発であり、ノーコードツールなのですが、この問題自体を解決するものでない、ということは意識しましょう。
 
 来週はこの授業についてまとめて、期末レポート(manabaに掲載済みだけど)を行います。
 
