視点回転をアップデート

--- a/2022/MediaRepresentationV/mr5_01.md
+++ b/2022/MediaRepresentationV/mr5_01.md
@@ -6,32 +6,34 @@
 
 ## 目次
 
-1. [メディア表現 V 1. オリエンテーション](#メディア表現-v-1-オリエンテーション)
-   1. [目次](#目次)
-   2. [シラバス紹介](#シラバス紹介)
-      1. [授業のねらい及び到達目標](#授業のねらい及び到達目標)
-      2. [授業の形式・計画](#授業の形式計画)
-   3. [利用するアプリについて](#利用するアプリについて)
-      1. [Blender について](#blender-について)
-      2. [Blender Overview](#blender-overview)
-      3. [他の 3D 系アプリについて](#他の-3d-系アプリについて)
-   4. [授業の進め方](#授業の進め方)
-   5. [3D Production Pipeline](#3d-production-pipeline)
-   6. [心構え](#心構え)
-      1. [いろんなリンク](#いろんなリンク)
-   7. [Blender インストール](#blender-インストール)
-      1. [LTS 使う人(バグなどの時用)](#lts-使う人バグなどの時用)
-   8. [起動しよう](#起動しよう)
-   9. [言語設定について(個人的には英語推奨)](#言語設定について個人的には英語推奨)
-   10. [画面を有効に使おう](#画面を有効に使おう)
-   11. [ファイルの管理について](#ファイルの管理について)
-   12. [物をおいてみよう](#物をおいてみよう)
-      1. [viewport の視点操作](#viewport-の視点操作)
-      2. [ライブラリから追加してみよう](#ライブラリから追加してみよう)
-      3. [Object の操作について](#object-の操作について)
-      4. [Render について](#render-について)
-      5. [(おまけ)スクリーンキャストについて](#おまけスクリーンキャストについて)
-   13. [お疲れ様でした〜](#お疲れ様でした)
+- [メディア表現 V 1. オリエンテーション](#メディア表現-v-1-オリエンテーション)
+  - [目次](#目次)
+  - [シラバス紹介](#シラバス紹介)
+    - [授業のねらい及び到達目標](#授業のねらい及び到達目標)
+    - [授業の形式・計画](#授業の形式計画)
+  - [利用するアプリについて](#利用するアプリについて)
+    - [Blender について](#blender-について)
+    - [Blender Overview](#blender-overview)
+    - [他の 3D 系アプリについて](#他の-3d-系アプリについて)
+  - [授業の進め方](#授業の進め方)
+  - [3D Production Pipeline](#3d-production-pipeline)
+  - [心構え](#心構え)
+    - [いろんなリンク](#いろんなリンク)
+  - [Blender インストール](#blender-インストール)
+    - [LTS 使う人(バグなどの時用)](#lts-使う人バグなどの時用)
+  - [起動しよう](#起動しよう)
+  - [言語設定について(個人的には英語推奨)](#言語設定について個人的には英語推奨)
+  - [画面を有効に使おう](#画面を有効に使おう)
+  - [ファイルの管理について](#ファイルの管理について)
+  - [物をおいてみよう](#物をおいてみよう)
+    - [viewport の視点操作](#viewport-の視点操作)
+      - [トラックパッド](#トラックパッド)
+      - [マウス](#マウス)
+    - [ライブラリから追加してみよう](#ライブラリから追加してみよう)
+    - [Object の操作について](#object-の操作について)
+    - [Render について](#render-について)
+    - [(おまけ)スクリーンキャストについて](#おまけスクリーンキャストについて)
+  - [お疲れ様でした〜](#お疲れ様でした)
 
 ---
 
@@ -211,7 +213,7 @@
 
 #### トラックパッド
 
-- 視点回転は 2 本指
+- 視点回転はPreference-Input-Emulate 3Button Mouseにチェクを入れて Option+クリック or 2本指
 - 視点平行移動は Shift+2 本指
 - 拡大縮小は Ctrl ＋ 2 本指 or ピンチイン・ピンチアウト
 - 上手くいかない人は、システム環境設定のトラックパッドを確認
