--- a/2023/MediaRepresentationV/mr5_01.md
+++ b/2023/MediaRepresentationV/mr5_01.md
@@ -89,7 +89,7 @@
 - Blender はずっと無料、Maya は学生の間だけ無料だが、その後は年間数十万かかる
 - プロは Maya と言われていたが、最近ではゲーム業界・アニメ業界にて Blender も使われ始めている
 - 参考 [『シン・エヴァ』で 3DCG を手がけたプロジェクトスタジオ Q、Blender の魅力を語る](https://news.mynavi.jp/article/20210804-1927380/){:target="_blank"}
-- 参考 [エヴァ制作のカラーが Blender への移行を進める理由とは？](https://japanese.engadget.com/jp-2019-08-14-blender-khara.html){:target="_blank"}
+- 参考 [エヴァ制作のカラーが Blender への移行を進める理由とは？](https://cgtracking.net/cg-news/khara-blender/){:target="_blank"}
 
 ---
 
@@ -99,6 +99,7 @@
 - 3D を使いこなすには数学や物理法則等を知る必要があるけど、必要最低限にとどめて「使う」ことをメインに進めていく。
 - 慣れてから技術的な背景については必要に応じて学んでいこう。
 - 基本をベースに教えていくので、3.0以降の機能については各自調べてみよう。
+- スクリーンキャスト・画像は、昨年度のを基本使い回すので、少し違ってたらごめんなさい。
 
 ## 3D Production Pipeline
 
@@ -131,8 +132,8 @@
 ## Blender インストール
 
 1. [Blender 公式サイト](https://www.blender.org/){:target="_blank"}
-2. 「Download Blender」をクリック
-3. Intel なら intel, M1 なら AppleSilicon, Win なら Installer
+2. 「Download」をクリック
+3. Intel なら intel, M1 なら AppleSilicon, Win なら Installer。自動でレコメンドされる。
 4. 「Download Blender3.5」をクリック
 5. ディスクイメージを開けて、Blender をアプリケーションフォルダにコピー(Winは普通にインストール)
 
