--- a/2023/MediaRepresentationV/mr5_01.md
+++ b/2023/MediaRepresentationV/mr5_01.md
@@ -181,7 +181,7 @@
 
 - iMac では Blender, Web ページを両方おくことができるが、ノートパソコンなら、三本指でスワイプして 2 画面をうまく使いこなそう。
 - [EasyRes](https://apps.apple.com/jp/app/easyres/id688211836?mt=12){:target="_blank"}を使うと、Mac の標準設定より解像度をさらに広げることができる。文字は小さくなるけど便利。(自分は 2048\*1280)
-- macOS 13.3 Venturaにアップデートした場合には、EasyResが入らなくて、システム環境設定から同様に設定することができる。[macOS 13.3 Venturaでは新しいシステム設定アプリで隠されていたディスプレイの解像度リストを表示させるオプションが追加。](https://applech2.com/archives/20230407-macos-133-ventura-back-show-resolutions-as-list.html){:target="_blank"}
+- macOS 13.3 Venturaにアップデートした場合には、EasyResがいらなくて、システム環境設定から同様に設定することができる。[macOS 13.3 Venturaでは新しいシステム設定アプリで隠されていたディスプレイの解像度リストを表示させるオプションが追加。](https://applech2.com/archives/20230407-macos-133-ventura-back-show-resolutions-as-list.html){:target="_blank"}
 
 [![](https://img.youtube.com/vi/x9oyb64Snpk/0.jpg)](https://www.youtube.com/watch?v=x9oyb64Snpk){:target="_blank"}
 
@@ -224,7 +224,7 @@
 
 #### トラックパッド
 
-- 視点回転はPreference-Input-Emulate 3Button Mouseにチェクを入れて Option+クリック or 2本指
+- 視点回転はPreference-Input-Emulate 3Button Mouseにチェックを入れて Option+クリック or 2本指
 - 視点平行移動は Shift+2 本指
 - 拡大縮小は Ctrl ＋ 2 本指 or ピンチイン・ピンチアウト
 - 上手くいかない人は、システム環境設定のトラックパッドを確認
@@ -232,8 +232,9 @@
 [![](https://img.youtube.com/vi/l0kEjQBoSw4/0.jpg)](https://www.youtube.com/watch?v=l0kEjQBoSw4){:target="_blank"}
 
 #### マウス
-
-- ホイール付きマウスは、ホイールが中ボタンとなっている
+利用するなら3ボタン対応マウスが良いです。
+システム環境設定から、中ボタンをアサインしないと機能しないと思います。
+- ホイール付きマウスは、ホイールが中ボタンと設定できる
 - 視点回転は中ボタンドラッグ
 - 視点平行移動は Shift+中ボタンドラッグ
 - 拡大縮小はホイールを回転
