--- a/2023/MediaRepresentationV/mr5_05.md
+++ b/2023/MediaRepresentationV/mr5_05.md
@@ -19,7 +19,7 @@
       - [ガラス](#ガラス)
       - [すりガラス](#すりガラス)
       - [放射](#放射)
-      - [参考サイト](#参考サイト)
+      - [参考となるデータベース](#参考となるデータベース)
   - [マテリアルスロット](#マテリアルスロット)
   - [やってみようPart1](#やってみようpart1)
   - [UV展開](#uv展開)
@@ -140,7 +140,7 @@
 | Emission Strength                          | 適当に   |
 | ※レンダープロパティのBloomにチェックいれる |
 
-#### 参考サイト
+#### 参考となるデータベース
 - [PHYSICALY BASED](https://physicallybased.info/)
 
 ---
@@ -197,7 +197,8 @@
 
 - [JSplacement](https://windmillart.net/?p=jsplacement){:target="_blank"}
 過去にはここで配布されていましたが、配布停止してしまいました。
-StudentVolume - App - JSplacemnt
+
+> StudentVolume - App - JSplacemnt
 
 からダウンロードしてください。
 
