--- a/2023/MediaRepresentationIII/mr3_05.md
+++ b/2023/MediaRepresentationIII/mr3_05.md
@@ -6,11 +6,10 @@
 
 ## 目次
 
-1. [メディア表現 III 5.カラーグレーディング](#メディア表現-iii-5カラーグレーディング)
-   1. [目次](#目次)
-   2. [スライド](#スライド)
-   3. [データ](#データ)
-   4. [動画](#動画)
+- [メディア表現 III 5.カラーグレーディング](#メディア表現-iii-5カラーグレーディング)
+  - [目次](#目次)
+  - [スライド](#スライド)
+  - [動画](#動画)
 
 ---
 
@@ -18,8 +17,6 @@
 
 [スライド資料](./mr3_05slide.pdf){:target="_blank"}
 
-## データ
-- [肌色の修正](https://helpx.adobe.com/jp/premiere-pro/how-to/correct-skin-tones.html){:target="_blank"}
 
 ## 動画
 - [Premiere Pro ティールアンドオレンジ](https://www.youtube.com/watch?v=zcRHzZbJZHA){:target="_blank"}
