--- a/2022/MediaRepresentationIII/mr3_08.md
+++ b/2022/MediaRepresentationIII/mr3_08.md
@@ -6,16 +6,21 @@
 
 ## 目次
 
-1. [メディア表現 III 8.構造](#メディア表現-iii-8構造)
-   1. [目次](#目次)
-   2. [スライド](#スライド)
-   3. [動画](#動画)
+- [メディア表現 III 8.構造](#メディア表現-iii-8構造)
+  - [目次](#目次)
+  - [スライド](#スライド)
+  - [2022.10 memo](#202210-memo)
+  - [動画](#動画)
 
 ---
 
 ## スライド
 
 [スライド資料](./mr3_08slide.pdf){:target="_blank"}
+
+## 2022.10 memo
+トラックマットのインターフェイスが変更あり
+https://cginterest.com/2022/10/19/after-effects-23-0-%E3%81%8C%E3%83%AA%E3%83%AA%E3%83%BC%E3%82%B9%E3%80%81%E9%81%B8%E6%8A%9E%E5%8F%AF%E8%83%BD%E3%81%AA%E3%83%88%E3%83%A9%E3%83%83%E3%82%AF%E3%83%9E%E3%83%83%E3%83%88%E3%83%AC%E3%82%A4/#toc2
 
 
 ## 動画
