--- a/2023/SoundDesign/sd_07.md
+++ b/2023/SoundDesign/sd_07.md
@@ -4,8 +4,8 @@
 
 ---
 
-1. [スライド](#スライド)
-2. [参考リンク](#参考リンク)
+- [スライド](#スライド)
+- [参考リンク](#参考リンク)
 
 ---
 
@@ -20,3 +20,7 @@
 - [eMastered](https://emastered.com/ja)
 - [動画の音声マスタリング](https://saidera.co.jp/video_mastering.html)
 - [LOUDNESS PENALTY: ANALYZER](https://www.loudnesspenalty.com/)
+
+<!--
+## 授業後メモ
+- ネット環境悪く、あまり実演できず、早めに終わった-->
