--- a/2023/SoundDesign/sd_10.md
+++ b/2023/SoundDesign/sd_10.md
@@ -19,8 +19,8 @@
 ## データ
 - [GarageBandデータ](data/sd_10_2023version%20_setup.band.zip)
 <!--
-- [Garage Band データ](data/garageband_data.zip)
-- -->
+[Garage Band データ](data/garageband_data.zip)
+-->
 
 ## 最終課題について
 - [最終課題について](./sd_kadai.md)
