--- a/2023/MediaRepresentationV/mr5_11.md
+++ b/2023/MediaRepresentationV/mr5_11.md
@@ -7,6 +7,7 @@
 
 - [メディア表現V 11. 物理演算・パーティクル](#メディア表現v-11-物理演算パーティクル)
   - [目次](#目次)
+  - [Blender 3.6](#blender-36)
   - [物理演算](#物理演算)
   - [クロス](#クロス)
   - [やってみようPart1 クロス基本](#やってみようpart1-クロス基本)
@@ -18,7 +19,10 @@
   - [お疲れ様ー](#お疲れ様ー)
 
 ---
-
+## Blender 3.6
+新しいバージョンリリースされました。少し機能をみてみましょう。
+- [Blender 3.6 LTS - Reel](https://www.youtube.com/watch?v=BnY2JdBrvaI)
+- [BEST Features in Blender 3.6 in LESS than FIVE Minutes!](https://www.youtube.com/watch?v=rRK4-k-4hRU)
 
 ## 物理演算
 物理演算とは、物体の運動を物理法則に基づき数値計算（シミュレーション）すること。これにより、
