--- a/2023/SoundDesign/sd_12.md
+++ b/2023/SoundDesign/sd_12.md
@@ -16,9 +16,5 @@
 
 [スライド資料](./sd_12slide.pdf){:target="_blank"}
 
-## 素材データ
-- [最終課題用素材データ](https://helpx.adobe.com/jp/audition/how-to/music-editor.html){:target="_blank"}
-- [Elephant Dream 脚本の翻訳もどき](xls/translate.xlsx){:target="_blank"}
-
-## 参考リンク
-- [Elephant Dream Wiki](https://ja.wikipedia.org/wiki/Elephants_Dream){:target="_blank"}
+## 最終課題について
+- [最終課題について](./sd_kadai.md)
