--- a/2023/MediaRepresentationV/mr5_12.md
+++ b/2023/MediaRepresentationV/mr5_12.md
@@ -8,6 +8,7 @@
 - [メディア表現V 12. シェーダーエディター](#メディア表現v-12-シェーダーエディター)
   - [目次](#目次)
   - [追加(2023/5/21)](#追加2023521)
+  - [注意！](#注意)
   - [ノードベースエディター](#ノードベースエディター)
     - [ノードベースエディターとは？](#ノードベースエディターとは)
     - [Node Wrangler(必須Add On!)](#node-wrangler必須add-on)
@@ -37,6 +38,9 @@
 ---
 ## 追加(2023/5/21)
 [【初心者必見】仕組みもわかるblenderノード解説【木目編】](https://www.youtube.com/watch?v=zIpMjHux-yo)
+
+## 注意！
+「CombineRGB」ノードが最近のバージョンでは「Combine Color」に変更されている様です。
 
 ## ノードベースエディター
 [![](https://img.youtube.com/vi/DbeUAZfhR0E/0.jpg)](https://www.youtube.com/watch?v=DbeUAZfhR0E){:target="_blank"}
