--- a/2023/MediaRepresentationIII/mr3_11.md
+++ b/2023/MediaRepresentationIII/mr3_11.md
@@ -6,10 +6,11 @@
 
 ## 目次
 
-1. [メディア表現 III 11.エクスプレッション](#メディア表現-iii-11エクスプレッション)
-   1. [目次](#目次)
-   2. [スライド](#スライド)
-   3. [動画](#動画)
+- [メディア表現 III 11.エクスプレッション](#メディア表現-iii-11エクスプレッション)
+  - [目次](#目次)
+  - [スライド](#スライド)
+  - [動画](#動画)
+  - [参考](#参考)
 
 ---
 
@@ -19,3 +20,6 @@
 
 ## 動画
 - [expression](https://www.youtube.com/watch?v=_WhzE2SrvxU){:target="_blank"}
+
+## 参考
+- [セガ 基礎線形代数講座](https://techblog.sega.jp/entry/2021/06/15/100000)
