--- a/Hardware/Audio/f3.md
+++ b/Hardware/Audio/f3.md
@@ -7,7 +7,7 @@ F3の利用方法について詳細にまとめます。
 
 ### 接続
 1. microSDカードがセットされていることを確認
-2. 電池をセット
+2. 単体で利用する場合電池をセット、オーディオインターフェイスとして利用する場合Type-Cでパソコンと接続
 3. マイクをセット
 4. ヘッドフォンをセット
 5. HOLDになっていないことを確認して電源ON(長押し)
@@ -32,4 +32,8 @@ INPUT1,2に設定が必要
 5. Floatを選択(Linearでは表示の拡大率が入力レベルに影響します)
 6. DAWの環境設定で「ZoomF3」を設定
 7. トラックに音をアサインして、録音
-8. 
+
+Windowsでは
+- [F3 Support](https://zoomcorp.com/ja/jp/field-recorders/field-recorders/f3/f3-support/)
+
+からドライバのインストールが必要となります。
