--- a/2023/MediaRepresentationIII/mr3_10.md
+++ b/2023/MediaRepresentationIII/mr3_10.md
@@ -6,17 +6,23 @@
 
 ## 目次
 
-1. [メディア表現 III 10.モーショングラフィックステンプレートの制作](#メディア表現-iii-10モーショングラフィックステンプレートの制作)
-   1. [目次](#目次)
-   2. [スライド](#スライド)
-   3. [動画](#動画)
-   4. [リンク](#リンク)
+- [メディア表現 III 10.モーショングラフィックステンプレートの制作](#メディア表現-iii-10モーショングラフィックステンプレートの制作)
+  - [目次](#目次)
+  - [スライド](#スライド)
+  - [追記(2023/7/13)](#追記2023713)
+  - [動画](#動画)
+  - [リンク](#リンク)
 
 ---
 
 ## スライド
 
 [スライド資料](./mr3_10slide.pdf){:target="_blank"}
+
+## 追記(2023/7/13)
+キーフレームを設定しているパラメータを、MOGRTのパラメータに設定をすると、キーフレームは無視されるので気をつけましょう。
+ヌルオブジェクトや、他のコンポジションを入れ子にして使いましょう。
+![](./img/mogrt_parameter_keyframe.png)
 
 ## 動画
 - [MOGRTを使ってみる](https://www.youtube.com/watch?v=hjpnfrba070){:target="_blank"}
