--- a/2023/MediaRepresentationV/mr5_14.md
+++ b/2023/MediaRepresentationV/mr5_14.md
@@ -16,6 +16,7 @@
     - [レイヤーベース](#レイヤーベース)
     - [ノードベース](#ノードベース)
     - [レイヤーベースとノードベースの比較](#レイヤーベースとノードベースの比較)
+  - [レンダーパス](#レンダーパス)
   - [画像ファイルについて](#画像ファイルについて)
     - [OpenEXR](#openexr)
   - [BlenderでのOpenEXRを利用したコンポジット](#blenderでのopenexrを利用したコンポジット)
@@ -103,6 +104,19 @@
 ### レイヤーベースとノードベースの比較
 Fusionの例ですがみてみましょう。
 [レイヤーベースvsノードベース | Adobe After EffectsとFusionの違い、共通点からノードの概念を学ぶ l フュージョン入門](https://www.youtube.com/watch?v=zben_WO3O-w&t=90){target="_blank"}
+
+## レンダーパス
+これまで、レンダリングに関してはファイル形式を指定してファイル出力する方法しか教えてきませんでした。
+
+レンダリング時には最終出力画像だけでなく
+- 奥行き
+- 色のみ
+- 陰影のみ
+
+といった情報を画像として出力する機能があります。これを**レンダーパス**と言い、コンポジット時にさまざまな調整を加えられるようになります。
+
+- [Blender-Eeveeのレンダリングパス](https://qiita.com/yukimituki11/items/c8d76e81272b3288483b)
+
 
 ## 画像ファイルについて
 合成する時には、一度Blenderからレンダリングする必要があります。
