--- a/2023/SoundDesign/sd_14.md
+++ b/2023/SoundDesign/sd_14.md
@@ -16,6 +16,29 @@
 
 [スライド資料](./sd_14slide.pdf){:target="_blank"}
 
+## Zoom F3のWindowsドライバについて
+Windowsではドライバを入れないといけません。
+- [Zoom F3 Support](https://zoomcorp.com/ja/jp/field-recorders/field-recorders/f3/f3-support/)
+
+から、
+- 「F3ドライバ」をダウンロード
+- zipを開いて、全てを展開する
+- 展開されたZoom F3.exeを実行
+
+この時、「インストールしようとしているアプリは、Microsoft Storeの確認済みアプリではありません」と表示された場合には、Microsoft Store以外からのアプリのインストールを禁止している設定になります。
+以下のように制限を解除してください。
+
+- スタート - 設定
+- アプリ
+- 「アプリと機能」または「アプリの詳細設定」
+- 「アプリを入手する場所の選択」のvをクリック
+- 「場所を選ばない」
+
+に設定しましょう。
+
+- [参考](https://faq.sourcenext.com/app/answers/detail/a_id/15263/~/%E3%80%8C%E3%82%A4%E3%83%B3%E3%82%B9%E3%83%88%E3%83%BC%E3%83%AB%E3%81%97%E3%82%88%E3%81%86%E3%81%A8%E3%81%97%E3%81%A6%E3%81%84%E3%82%8B%E3%82%A2%E3%83%97%E3%83%AA%E3%81%AF%E3%80%81microsoft-store%E3%81%AE%E7%A2%BA%E8%AA%8D%E6%B8%88%E3%81%BF%E3%82%A2%E3%83%97%E3%83%AA%E3%81%A7%E3%81%AF%E3%81%82%E3%82%8A%E3%81%BE%E3%81%9B%E3%82%93%E3%80%8D%E3%81%A8%E8%A1%A8%E7%A4%BA%E3%81%95%E3%82%8C%E3%82%8B)
+
+
 
 ## 最終課題について
 - [最終課題について](./sd_kadai.md)
