--- a/2023/MediaRepresentationIII/mr3_04.md
+++ b/2023/MediaRepresentationIII/mr3_04.md
@@ -6,10 +6,11 @@
 
 ## 目次
 
-1. [メディア表現 III 4.カラーコレクション](#メディア表現-iii-4カラーコレクション)
-   1. [目次](#目次)
-   2. [スライド](#スライド)
-   3. [データ](#データ)
+- [メディア表現 III 4.カラーコレクション](#メディア表現-iii-4カラーコレクション)
+  - [目次](#目次)
+  - [スライド](#スライド)
+  - [データ](#データ)
+  - [追加](#追加)
 
 ---
 
@@ -20,4 +21,13 @@
 ## データ
 - [グレイスケールチャート](data/grayscale.png){:target="_blank"}
 - [肌色の修正](https://helpx.adobe.com/jp/premiere-pro/how-to/correct-skin-tones.html){:target="_blank"}
+
+## 追加
+- [How to Color Correct (for beginners) - Master the Basics]https://www.youtube.com/watch?v=pcpyaY3kl10
+
+1. Contrast
+2. Saturation
+3. Exposure
+4. WhiteBalance
+5. Curves
 
