--- a/2023/MediaRepresentationV/mr5_13.md
+++ b/2023/MediaRepresentationV/mr5_13.md
@@ -25,6 +25,7 @@
     - [マテリアルの設定](#マテリアルの設定)
   - [参考](#参考)
   - [お疲れ様](#お疲れ様)
+  - [追加(2023/08/20)](#追加20230820)
 
 ---
 
@@ -172,3 +173,7 @@
 ## お疲れ様
 - Geometryノードは最近追加された機能で、バージョンアップとともにノードが増えるし、できることが増えていくよ
 - 向き不向きはあるかと思うけど、興味ある人はまず、いろんな人のノードの作り方を真似ると、「こんなノードあるのか」「こんなコントロールができるのか」とわかってくるはず
+
+---
+## 追加(2023/08/20)
+- [Blender ジオメトリノード仕様まとめ 日本語で200Pにわたる解説](https://drive.google.com/file/d/1i1WQ1BrnNliQMuozV4yzkSB0UeAp7qa7/view)
